--- a/res/config.json
+++ b/res/config.json
@@ -1,12 +1,10 @@
 {
 	"window size":{
-		"width" : 1280,
-		"height" : 720
+		"width" : 1680,
+		"height" : 1050
 	},
 	
-	"display" : 0,
+	"full screen" : true,
 	
-	"graphics card" :0,
-	
-	"full screen" : false
+	"display" : 0
 }
