--- a/res/config.json
+++ b/res/config.json
@@ -1,10 +1,10 @@
 {
 	"window size":{
-		"width" : 1680,
-		"height" : 1050
+		"width" : 1000,
+		"height" : 800
 	},
 	
-	"full screen" : true,
+	"full screen" : false,
 	
 	"display" : 0,
 	
