The game menu is created, exit, settings applied on the current window (except for sampling), then I proceed to the implementation of the game logic

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,6 +47,8 @@ add_executable(${PROJECT}
 	
 	src/GameClass/MainGameClass.cpp
 	src/GameClass/MainGameClass.h
+	src/GameClass/StatesMenu.cpp
+	src/GameClass/StatesMenu.h
 	src/GameClass/GameObject.cpp
 	src/GameClass/GameObject.h
 	src/GameClass/StateController.cpp
