add character class and following way functin fjr character

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,6 +81,8 @@ add_executable(${PROJECT}
 	src/GameEngine/Objects/Object.cpp
 	src/GameEngine/Objects/Trigger.h
 	src/GameEngine/Objects/Trigger.cpp
+	src/GameEngine/Objects/Character.h
+	src/GameEngine/Objects/Character.cpp
 	
 	src/GameEngine/PhysicsAndLogic/Collision.h
 	src/GameEngine/PhysicsAndLogic/Collision.cpp
